fix: fix styling on home page
Section styled with metrics class on home page not aligned
correctly on big screens more that 2600px width

fix/metrics-align-correctly-at-big-screens

--- a/src/assets/scss/homepage.scss
+++ b/src/assets/scss/homepage.scss
@@ -144,6 +144,7 @@
 
     @media all and (min-width: 768px) {
         display: flex;
+        justify-content: space-evenly;
     }
 }
 
